--- a/css/blog_page.css
+++ b/css/blog_page.css
@@ -66,7 +66,7 @@ h3 {
 ul{
   font-family: Verdana, Arial, Helvetica, sans-serif;
   list-style-type:disc;
-  margin: 16px;
+  margin-left: 40px;
   /*font-size: 12px;*/
   line-height: 2em;
 }
@@ -124,7 +124,3 @@ pre {
   width: 100%; 
 }
 
-.diagram {
-  text-align: center;
-  font-style: italic;
-}
